--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -48,6 +48,7 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - MON 10/03/2022
+* (done) edit threejs-canvas-texture
 * () edit threejs-buffer-geometry-attributes-position
 * () videoground-blog-posts: 
 
