--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -43,17 +43,17 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - TUE 10/04/2022
-* () forpost folder for threejs-buffergeometry-compute-bounding-box
-* () threejs-examples-animation-loop-module: example using lines-determanisic threejs example
+* () edit threejs-canvas-texture : animation section
 * () edit threejs-buffer-geometry-attributes-position
+
+* () forpost folder for threejs-buffergeometry-compute-bounding-box
+
+* () threejs-examples-animation-loop-module: example using lines-determanisic threejs example
+
 
 ### () - MON 10/03/2022
 * (done) edit threejs-canvas-texture
 * () edit threejs-buffer-geometry-attributes-position
-* () videoground-blog-posts: 
-
-* () start forpost folder for threejs-buffergeometry-compute-bounding-box
-* () threejs-examples-animation-loop-module: start new demo, and work on r1
 
 ### () - SUN 10/02/2022
 * (done) edit threejs-buffer-geometry-attributes-position
