--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -27,6 +27,7 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () threejs-examples-animation-loop-module
 * () hexo-sitesource: at least have a new static background
 * () build and publish
+* () threejs-examples-animation-loop-module: example using lines-determanisic threejs example
 
 ### () - FRI 10/07/2022
 * () start post #1008 on threejs-buffergeometry-compute-bounding-box
@@ -38,22 +39,20 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - WED 10/05/2022
+* () proof read: threejs-object3d-lookat 
 * () forpost folder for threejs-buffergeometry-compute-bounding-box
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - TUE 10/04/2022
-* () edit threejs-canvas-texture : animation section
 * () edit threejs-buffer-geometry-attributes-position
-
 * () forpost folder for threejs-buffergeometry-compute-bounding-box
-
-* () threejs-examples-animation-loop-module: example using lines-determanisic threejs example
-
+* () edit threejs-canvas-texture : animation section
+* () videoground-blog-posts: 
 
 ### () - MON 10/03/2022
 * (done) edit threejs-canvas-texture
-* () edit threejs-buffer-geometry-attributes-position
+* (done) edit threejs-buffer-geometry-attributes-position
 
 ### () - SUN 10/02/2022
 * (done) edit threejs-buffer-geometry-attributes-position
