--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -39,15 +39,17 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - WED 10/05/2022
-* () proof read: threejs-object3d-lookat 
+
 * () forpost folder for threejs-buffergeometry-compute-bounding-box
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - TUE 10/04/2022
-* () edit threejs-buffer-geometry-attributes-position
-* () forpost folder for threejs-buffergeometry-compute-bounding-box
+* (done) edit threejs-buffer-geometry-attributes-position
+* () proof read: threejs-object3d-lookat 
 * () edit threejs-canvas-texture : animation section
+
+* () forpost folder for threejs-buffergeometry-compute-bounding-box
 * () videoground-blog-posts: 
 
 ### () - MON 10/03/2022
