--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -46,7 +46,7 @@ As with every week there is what I will be writing about on Friday. I will also 
 
 ### () - TUE 10/04/2022
 * (done) edit threejs-buffer-geometry-attributes-position
-* () proof read: threejs-object3d-lookat 
+* (done) proof read opening: threejs-object3d-lookat 
 * () edit threejs-canvas-texture : animation section
 
 * () forpost folder for threejs-buffergeometry-compute-bounding-box
