--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -34,13 +34,12 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () threejs-examples-animation-loop-module
 
 ### () - THU 10/06/2022
-* () forpost folder for threejs-buffergeometry-compute-bounding-box
+* () forpost folder for threejs-buffergeometry-compute-bounding-box: loop section
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - WED 10/05/2022
-
-* () forpost folder for threejs-buffergeometry-compute-bounding-box
+* () forpost folder for threejs-buffergeometry-compute-bounding-box: basic section, start loop section
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 
@@ -48,8 +47,8 @@ As with every week there is what I will be writing about on Friday. I will also 
 * (done) edit threejs-buffer-geometry-attributes-position
 * (done) proof read opening: threejs-object3d-lookat 
 * (done) edit threejs-canvas-texture : animation section
+* (done) forpost folder for threejs-buffergeometry-compute-bounding-box
 
-* () forpost folder for threejs-buffergeometry-compute-bounding-box
 * () videoground-blog-posts: 
 
 ### () - MON 10/03/2022
