--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -43,13 +43,19 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 
+* () test-threejs: threejs-raycaster: more examples, have something cool for video1
+* () videoground-blog-posts: threejs-raycaster video1 for the post
+* () edit: threejs-raycaster - embed video1, write about new examples, proof read opening
+
 ### () - TUE 10/04/2022
 * (done) edit threejs-buffer-geometry-attributes-position
 * (done) proof read opening: threejs-object3d-lookat 
 * (done) edit threejs-canvas-texture : animation section
 * (done) forpost folder for threejs-buffergeometry-compute-bounding-box
 
-* () videoground-blog-posts: 
+* () test-threejs: threejs-data-texture: more examples, have something cool for video1
+* () videoground-blog-posts: threejs-data-texture video1 for the post
+* () edit: threejs-data-texture - embed video1, write about new examples, proof read opening
 
 ### () - MON 10/03/2022
 * (done) edit threejs-canvas-texture
