--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -52,8 +52,8 @@ As with every week there is what I will be writing about on Friday. I will also 
 * (done) proof read opening: threejs-object3d-lookat 
 * (done) edit threejs-canvas-texture : animation section
 * (done) forpost folder for threejs-buffergeometry-compute-bounding-box
+* (done) test-threejs: threejs-data-texture: update examples
 
-* () test-threejs: threejs-data-texture: more examples, have something cool for video1
 * () videoground-blog-posts: threejs-data-texture video1 for the post
 * () edit: threejs-data-texture - embed video1, write about new examples, proof read opening
 
