--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -43,6 +43,8 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 
+* () edit: threejs-data-texture - write about new examples, proof read opening
+
 * () test-threejs: threejs-raycaster: more examples, have something cool for video1
 * () videoground-blog-posts: threejs-raycaster video1 for the post
 * () edit: threejs-raycaster - embed video1, write about new examples, proof read opening
@@ -53,9 +55,8 @@ As with every week there is what I will be writing about on Friday. I will also 
 * (done) edit threejs-canvas-texture : animation section
 * (done) forpost folder for threejs-buffergeometry-compute-bounding-box
 * (done) test-threejs: threejs-data-texture: update examples
-
-* () videoground-blog-posts: threejs-data-texture video1 for the post
-* () edit: threejs-data-texture - embed video1, write about new examples, proof read opening
+* (done) videoground-blog-posts: threejs-data-texture video1 for the post
+* (done) edit: threejs-data-texture - embed video1
 
 ### () - MON 10/03/2022
 * (done) edit threejs-canvas-texture
