--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -21,7 +21,7 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ## () - WEEK 2 - SUN 10/02/2022 to SAT 10/8/2022
 
-As with every week there is what I will be writing about on Friday. I will also like to keep up with editing my top ten posts. The other thing is the animation-loop-framework, that is something that i would like to add to dustinpfister.github.io if not at then end of this week soon.
+As with every week there is what I will be writing about on Friday. I will also like to keep up with editing my top ten posts. The other thing is the animation-loop-framework, that is something that I would like to add to dustinpfister.github.io if not at then end of this week soon.
 
 ### () - SAT 10/08/2022
 * () threejs-examples-animation-loop-module
@@ -39,11 +39,13 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - WED 10/05/2022
-* () forpost folder for threejs-buffergeometry-compute-bounding-box: basic section, start loop section
-* () threejs-examples-animation-loop-module
+* () edit: threejs-lookat - proof read opening, check for post folder
+* () edit: threejs-data-texture - write about new examples, proof read opening
 * () edit threejs-buffer-geometry-attributes-position
 
-* () edit: threejs-data-texture - write about new examples, proof read opening
+
+* () forpost folder for threejs-buffergeometry-compute-bounding-box: basic section, start loop section
+* () threejs-examples-animation-loop-module : work on r1 of the module
 
 * () test-threejs: threejs-raycaster: more examples, have something cool for video1
 * () videoground-blog-posts: threejs-raycaster video1 for the post
