--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -35,15 +35,15 @@ As with every week there is what I will be writing about on Friday. I will also 
 
 ### () - THU 10/06/2022
 * () edit: threejs-lookat - proof read section 2 on world space
+* () edit: threejs-data-texture - write more about new examples
 * () forpost folder for threejs-buffergeometry-compute-bounding-box: loop section
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - WED 10/05/2022
 * (done) edit: threejs-lookat - proof read opening, check for post folder
-* () edit: threejs-data-texture - write about new examples, proof read opening
+* (done) edit: threejs-data-texture - proof read opening
 * () edit threejs-buffer-geometry-attributes-position
-
 
 * () forpost folder for threejs-buffergeometry-compute-bounding-box: basic section, start loop section
 * () threejs-examples-animation-loop-module : work on r1 of the module
