--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -34,8 +34,12 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () threejs-examples-animation-loop-module
 
 ### () - THU 10/06/2022
+
+* () edit threejs-buffer-geometry-attributes-position : non indexed version of box geometry example
+
 * () edit: threejs-lookat - proof read section 2 on world space
 * () edit: threejs-data-texture - write more about new examples
+
 * () forpost folder for threejs-buffergeometry-compute-bounding-box: loop section
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
@@ -43,7 +47,7 @@ As with every week there is what I will be writing about on Friday. I will also 
 ### () - WED 10/05/2022
 * (done) edit: threejs-lookat - proof read opening, check for post folder
 * (done) edit: threejs-data-texture - proof read opening
-* () edit threejs-buffer-geometry-attributes-position
+* (done) edit threejs-buffer-geometry-attributes-position
 
 * () forpost folder for threejs-buffergeometry-compute-bounding-box: basic section, start loop section
 * () threejs-examples-animation-loop-module : work on r1 of the module
