--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -42,7 +42,7 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () threejs-examples-animation-loop-module
 
 ### () - THU 10/06/2022
-* () edit: threejs-data-texture - write more about new examples
+* (done) edit: threejs-data-texture - write more about new examples
 * () edit threejs-buffer-geometry-attributes-position : non indexed version of box geometry example
 * () forpost folder for threejs-buffergeometry-compute-bounding-box: basic section, start loop section
 
