--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -23,8 +23,7 @@ POST                                                        CLICKS  IMPRESSIONS
 
 * () edit: threejs-lookat - proof read section 2 on world space
 * () test-threejs: threejs-raycaster: more examples, have something cool for video1
-* () videoground-blog-posts: threejs-raycaster video1 for the post
-* () edit: threejs-raycaster - embed video1, write about new examples, proof read opening
+
 
 
 ## () - WEEK 2 - SUN 10/02/2022 to SAT 10/08/2022
@@ -43,8 +42,12 @@ As with every week there is what I will be writing about on Friday. I will also 
 
 ### () - THU 10/06/2022
 * (done) edit: threejs-data-texture - write more about new examples
-* () edit threejs-buffer-geometry-attributes-position : non indexed version of box geometry example
+* (done) edit threejs-buffer-geometry-attributes-position : non indexed version of box geometry example
+
 * () forpost folder for threejs-buffergeometry-compute-bounding-box: basic section, start loop section
+
+* () videoground-blog-posts: threejs-raycaster video1 for the post
+* () edit: threejs-raycaster - embed video1, write about new examples, proof read opening
 
 
 ### () - WED 10/05/2022
