--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -43,12 +43,11 @@ As with every week there is what I will be writing about on Friday. I will also 
 ### () - THU 10/06/2022
 * (done) edit: threejs-data-texture - write more about new examples
 * (done) edit threejs-buffer-geometry-attributes-position : non indexed version of box geometry example
+* (done) forpost folder for threejs-buffergeometry-compute-bounding-box: basic section, start loop section
 
-* () forpost folder for threejs-buffergeometry-compute-bounding-box: basic section, start loop section
 
 * () videoground-blog-posts: threejs-raycaster video1 for the post
 * () edit: threejs-raycaster - embed video1, write about new examples, proof read opening
-
 
 ### () - WED 10/05/2022
 * (done) edit: threejs-lookat - proof read opening, check for post folder
