--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -34,10 +34,11 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () threejs-examples-animation-loop-module
 * () hexo-sitesource: at least have a new static background
 * () build and publish
-* () threejs-examples-animation-loop-module: example using lines-determanisic threejs example
+* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 
 ### () - FRI 10/07/2022
 * () start post #1008 on threejs-buffergeometry-compute-bounding-box
+* () edit: threejs-raycaster - write about new examples, proof read opening
 * () threejs-examples-animation-loop-module
 
 ### () - THU 10/06/2022
@@ -46,7 +47,6 @@ As with every week there is what I will be writing about on Friday. I will also 
 * (done) forpost folder for threejs-buffergeometry-compute-bounding-box: basic section, start loop section
 * (done) videoground-blog-posts: threejs-raycaster video1 for the post
 * (done) edit: threejs-raycaster - embed video1
-* () edit: threejs-raycaster - write about new examples, proof read opening
 
 ### () - WED 10/05/2022
 * (done) edit: threejs-lookat - proof read opening, check for post folder
