--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -37,8 +37,12 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 
 ### () - FRI 10/07/2022
-* () start post #1008 on threejs-buffergeometry-compute-bounding-box
+* (done) start post #1008 on threejs-buffer-geometry-compute-bounding-box
 * () edit: threejs-raycaster - write about new examples, proof read opening
+
+* () videoground-blog-posts: threejs-buffer-geometry-compute-bounding-box video1
+* () edit: threejs-buffer-geometry-compute-bounding-box - embed video1
+
 * () threejs-examples-animation-loop-module
 
 ### () - THU 10/06/2022
