--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -38,7 +38,10 @@ As with every week there is what I will be writing about on Friday. I will also 
 
 ### () - FRI 10/07/2022
 * (done) start post #1008 on threejs-buffer-geometry-compute-bounding-box
-* () edit: threejs-raycaster - write about new examples, proof read opening
+* (done) edit: threejs-raycaster - write about new examples
+* () edit: threejs-raycaster - proof read opening
+* () edit: threejs-raycaster - update and edit mouseover example
+* () edit: threejs-raycaster - update and edit cube grid example
 
 * () videoground-blog-posts: threejs-buffer-geometry-compute-bounding-box video1
 * () edit: threejs-buffer-geometry-compute-bounding-box - embed video1
