--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -39,13 +39,13 @@ As with every week there is what I will be writing about on Friday. I will also 
 ### () - FRI 10/07/2022
 * (done) start post #1008 on threejs-buffer-geometry-compute-bounding-box
 * (done) edit: threejs-raycaster - write about new examples
-* () edit: threejs-raycaster - proof read opening
-* () edit: threejs-raycaster - update and edit mouseover example
-* () edit: threejs-raycaster - update and edit cube grid example
+* (done) edit: threejs-raycaster - proof read opening
 
 * () videoground-blog-posts: threejs-buffer-geometry-compute-bounding-box video1
 * () edit: threejs-buffer-geometry-compute-bounding-box - embed video1
 
+* () edit: threejs-raycaster - update and edit mouseover example
+* () edit: threejs-raycaster - update and edit cube grid example
 * () threejs-examples-animation-loop-module
 
 ### () - THU 10/06/2022
