--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -31,22 +31,20 @@ POST                                                        CLICKS  IMPRESSIONS
 As with every week there is what I will be writing about on Friday. I will also like to keep up with editing my top ten posts. The other thing is the animation-loop-framework, that is something that I would like to add to dustinpfister.github.io if not at then end of this week soon.
 
 ### () - SAT 10/08/2022
-* () threejs-examples-animation-loop-module
 * () hexo-sitesource: at least have a new static background
-* () build and publish
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
+
+* () build and publish
 
 ### () - FRI 10/07/2022
 * (done) start post #1008 on threejs-buffer-geometry-compute-bounding-box
 * (done) edit: threejs-raycaster - write about new examples
 * (done) edit: threejs-raycaster - proof read opening
-
-* () videoground-blog-posts: threejs-buffer-geometry-compute-bounding-box video1
-* () edit: threejs-buffer-geometry-compute-bounding-box - embed video1
+* (done) videoground-blog-posts: threejs-buffer-geometry-compute-bounding-box video1
+* (done) edit: threejs-buffer-geometry-compute-bounding-box - embed video1
 
 * () edit: threejs-raycaster - update and edit mouseover example
 * () edit: threejs-raycaster - update and edit cube grid example
-* () threejs-examples-animation-loop-module
 
 ### () - THU 10/06/2022
 * (done) edit: threejs-data-texture - write more about new examples
