--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -42,9 +42,7 @@ As with every week there is what I will be writing about on Friday. I will also 
 * (done) edit: threejs-raycaster - proof read opening
 * (done) videoground-blog-posts: threejs-buffer-geometry-compute-bounding-box video1
 * (done) edit: threejs-buffer-geometry-compute-bounding-box - embed video1
-
-* () edit: threejs-raycaster - update and edit mouseover example
-* () edit: threejs-raycaster - update and edit cube grid example
+* (done) edit: threejs-raycaster - update and edit mouseover example
 
 ### () - THU 10/06/2022
 * (done) edit: threejs-data-texture - write more about new examples
