--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -21,8 +21,28 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ## () - WEEK 3 - SUN 10/09/2022 to SAT 10/14/2022
 
-* () edit: threejs-lookat - proof read section 2 on world space
-* () test-threejs: threejs-raycaster: more examples, have something cool for video1
+I will want to try to keep the focus on editing one of the top ten posts per week. At this time that would mean my post on canvas textures.
+
+
+### () - SAT 10/14/2022
+
+### () - FRI 10/13/2022
+* () start post #1009 on threejs-
+
+### () - THU 10/12/2022
+* () edit: threejs-canvas-texture - 
+
+### () - TUE 10/11/2022
+* () edit: threejs-canvas-texture - 
+
+### () - MON 10/10/2022
+* () edit: threejs-canvas-texture - 
+
+### () - SUN 10/09/2022
+* () edit: threejs-canvas-texture - 
+
+### () - SUN 10/09/2022
+* () edit: threejs-canvas-texture - 
 
 
 
@@ -31,6 +51,7 @@ POST                                                        CLICKS  IMPRESSIONS
 As with every week there is what I will be writing about on Friday. I will also like to keep up with editing my top ten posts. The other thing is the animation-loop-framework, that is something that I would like to add to dustinpfister.github.io if not at then end of this week soon.
 
 ### () - SAT 10/08/2022
+* () edit: threejs-lookat - proof read section 2 on world space
 * () hexo-sitesource: at least have a new static background
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 
