--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -43,6 +43,8 @@ I will want to try to keep the focus on editing one of the top ten posts per wee
 
 ### () - SUN 10/09/2022
 * () edit: threejs-canvas-texture - 
+* () hexo-sitesource: at least have a new static background
+* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 
 
 
@@ -51,10 +53,7 @@ I will want to try to keep the focus on editing one of the top ten posts per wee
 As with every week there is what I will be writing about on Friday. I will also like to keep up with editing my top ten posts. The other thing is the animation-loop-framework, that is something that I would like to add to dustinpfister.github.io if not at then end of this week soon.
 
 ### () - SAT 10/08/2022
-* () edit: threejs-lookat - proof read section 2 on world space
-* () hexo-sitesource: at least have a new static background
-* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
-
+* (done) edit: threejs-lookat - proof read section 2 on world space
 * () build and publish
 
 ### () - FRI 10/07/2022
