--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -21,8 +21,17 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ## () - WEEK 3 - SUN 10/09/2022 to SAT 10/14/2022
 
-I will want to try to keep the focus on editing one of the top ten posts per week. At this time that would mean my post on canvas textures.
+I will want to try to keep the focus on editing one of the top ten posts per week. At this time that would mean my post on canvas textures. There is also as always what I will be writing about for my new post on Friday. I would like to try to not let to much more pull my attention away from those two things this week.
 
+So then the main things to get done this week are
+    * prototype and for post folder for Fridays post
+    * new examples, video2, and editing of the threejs-canvas-textures post
+
+Other tasks should be limited and only done after I put at least a little time into the above
+    * make and publish video1 videos for posts that do not have them yet
+    * work on the theme of the site, at least have a new static background
+    * work at least a little more on the header app idea
+    * edit other posts that are on the top ten, or relevant to them
 
 ### () - SAT 10/14/2022
 
@@ -30,19 +39,25 @@ I will want to try to keep the focus on editing one of the top ten posts per wee
 * () start post #1009 on threejs-
 
 ### () - THU 10/12/2022
+* () forpost: 
 * () edit: threejs-canvas-texture - 
 
-### () - TUE 10/11/2022
+### () - WED 10/11/2022
+* () forpost: 
 * () edit: threejs-canvas-texture - 
 
-### () - MON 10/10/2022
+### () - TUE 10/10/2022
+* () forpost: start for post folder for fridays post based on current protos
+* () edit: threejs-canvas-texture - 
+
+### () - MON 10/09/2022
+* () prototype: work on one or more protos for Fridays post
 * () edit: threejs-canvas-texture - 
 
 ### () - SUN 10/09/2022
+* () prototype: start proto for Fridays post
 * () edit: threejs-canvas-texture - 
 
-### () - SUN 10/09/2022
-* () edit: threejs-canvas-texture - 
 * () hexo-sitesource: at least have a new static background
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 
