--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -2,17 +2,17 @@
 
 THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND
 
-For yet another month the plan is to contine staying in my late with threejs. With that said I think the main thing I will focus on it to continue with what I started late last month, which it to focus on my top ten posts in terms of clicks.
+For yet another month the plan is to continue staying in my late with threejs. With that said I think the main thing I will focus on it to continue with what I started late last month, which it to focus on my top ten posts in terms of clicks.
 
 This is the current list as of 09/26/2022
 ```
 POST                                                        CLICKS  IMPRESSIONS
 /2022/04/04/threejs-object3d-position/                      285     4,887
-/2021/06/07/threejs-buffer-geometry-attributes-position/    176     2,649
-/2018/04/17/threejs-canvas-texture/                         149     1,693
-/2021/05/13/threejs-object3d-lookat/                        145     2,705
-/2021/06/03/threejs-object3d-traverse/                      133     1,600
-/2021/06/09/threejs-buffer-geometry-attributes-uv/          128     922
+/2021/06/07/threejs-buffer-geometry-attributes-position/    176     2,649        <= week2
+/2018/04/17/threejs-canvas-texture/                         149     1,693        <= week3
+/2021/05/13/threejs-object3d-lookat/                        145     2,705        <= week4
+/2021/06/03/threejs-object3d-traverse/                      133     1,600        <= week5
+/2021/06/09/threejs-buffer-geometry-attributes-uv/          128     922          <= week6
 /2018/05/16/threejs-grouping-mesh-objects/                  110     2,269
 /2021/04/21/threejs-materials-transparent/                  104     3,815
 /2018/04/16/threejs-fog/                                    104     1,389
