--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -55,8 +55,8 @@ Other tasks should be limited and only done after I put at least a little time i
 * () edit: threejs-canvas-texture - 
 
 ### () - SUN 10/09/2022
+* () edit: threejs-canvas-texture - check current state of for post folder
 * () prototype: start proto for Fridays post
-* () edit: threejs-canvas-texture - 
 
 * () hexo-sitesource: at least have a new static background
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
@@ -69,7 +69,7 @@ As with every week there is what I will be writing about on Friday. I will also 
 
 ### () - SAT 10/08/2022
 * (done) edit: threejs-lookat - proof read section 2 on world space
-* () build and publish
+* (done) build and publish
 
 ### () - FRI 10/07/2022
 * (done) start post #1008 on threejs-buffer-geometry-compute-bounding-box
