--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -51,17 +51,15 @@ Other tasks should be limited and only done after I put at least a little time i
 * () edit: threejs-canvas-texture - 
 
 ### () - MON 10/09/2022
-* () prototype: work on one or more protos for Fridays post
+* () prototype: work on proto-blogsum
 * () edit: threejs-canvas-texture - 
-
-### () - SUN 10/09/2022
-* () edit: threejs-canvas-texture - check current state of for post folder
-* () prototype: start proto for Fridays post
 
 * () hexo-sitesource: at least have a new static background
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 
-
+### () - SUN 10/09/2022
+* (done) edit: threejs-canvas-texture - check current state of for post folder
+* () prototype: start proto for Fridays post called proto-blogsum
 
 ## () - WEEK 2 - SUN 10/02/2022 to SAT 10/08/2022
 
