--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -59,7 +59,7 @@ Other tasks should be limited and only done after I put at least a little time i
 
 ### () - SUN 10/09/2022
 * (done) edit: threejs-canvas-texture - check current state of for post folder
-* () prototype: start proto for Fridays post called proto-blogsum
+* (done) prototype: start proto for Fridays post called proto-blogsum
 
 ## () - WEEK 2 - SUN 10/02/2022 to SAT 10/08/2022
 
