--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -47,12 +47,16 @@ Other tasks should be limited and only done after I put at least a little time i
 * () edit: threejs-canvas-texture - 
 
 ### () - TUE 10/10/2022
+* () edit: threejs-
+* () edit: threejs-canvas-texture - at least start a module example
 * () forpost: start for post folder for fridays post based on current protos
-* () edit: threejs-canvas-texture - 
 
 ### () - MON 10/09/2022
-* () prototype: work on proto-blogsum
-* () edit: threejs-canvas-texture - 
+* (done) edit: threejs-canvas-texture - new datatex example
+* () edit threejs-shape
+
+* () prototype: work on protos
+
 
 * () hexo-sitesource: at least have a new static background
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
