--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -53,8 +53,8 @@ Other tasks should be limited and only done after I put at least a little time i
 ### () - MON 10/09/2022
 * (done) edit: threejs-canvas-texture - new datatex example
 * (done) edit threejs-shape - new paths section
+* (done) edit threejs-shape: new loop section
 
-* () edit threejs-shape: new loop section
 * () videoground-blog-posts: threejs-shape video1
 * () edit threejs-shape - update code for basic, hole, and group sections
 
