--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -47,21 +47,20 @@ Other tasks should be limited and only done after I put at least a little time i
 * () edit: threejs-canvas-texture - 
 
 ### () - TUE 10/10/2022
+* () edit threejs-shape - update code for basic, hole, and group sections
 * () edit: threejs-canvas-texture - at least start a module example
+
 * () forpost: start for post folder for fridays post based on current protos
+* () prototype: work on protos
+* () hexo-sitesource: at least have a new static background
+* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
+
 
 ### () - MON 10/09/2022
 * (done) edit: threejs-canvas-texture - new datatex example
 * (done) edit threejs-shape - new paths section
 * (done) edit threejs-shape: new loop section
-
-* () videoground-blog-posts: threejs-shape video1
-* () edit threejs-shape - update code for basic, hole, and group sections
-
-* () prototype: work on protos
-
-* () hexo-sitesource: at least have a new static background
-* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
+* (done) videoground-blog-posts: threejs-shape video1
 
 ### () - SUN 10/09/2022
 * (done) edit: threejs-canvas-texture - check current state of for post folder
