--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -47,7 +47,10 @@ Other tasks should be limited and only done after I put at least a little time i
 * () edit: threejs-canvas-texture - 
 
 ### () - TUE 10/10/2022
-* () edit threejs-shape - update code for basic, hole, and group sections
+* () edit: threejs-examples-sphere-mutate - check out / create for post
+* () videoground-blog-posts: threejs-examples-sphere-mutate
+
+* () edit: threejs-shape - update code for basic, hole, and group sections
 * () edit: threejs-canvas-texture - at least start a module example
 
 * () forpost: start for post folder for fridays post based on current protos
