--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -47,7 +47,7 @@ Other tasks should be limited and only done after I put at least a little time i
 * () edit: threejs-canvas-texture - 
 
 ### () - TUE 10/10/2022
-* () edit: threejs-examples-sphere-mutate - write about new r1 example
+* (done) edit: threejs-examples-sphere-mutate - write about new r1 example
 * () videoground-blog-posts: threejs-examples-sphere-mutate video1 on r1 of the example
 
 * () edit: threejs-shape - update code for basic, hole, and group sections
