--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -42,6 +42,9 @@ Other tasks should be limited and only done after I put at least a little time i
 * () forpost: 
 * () edit: threejs-canvas-texture - 
 
+* () hexo-sitesource: at least have a new static background
+* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
+
 ### () - WED 10/11/2022
 * () forpost: 
 * () edit: threejs-canvas-texture - 
@@ -49,14 +52,12 @@ Other tasks should be limited and only done after I put at least a little time i
 ### () - TUE 10/10/2022
 * (done) edit: threejs-examples-sphere-mutate - write about new r1 example
 * (done) videoground-blog-posts: threejs-examples-sphere-mutate video1 on r1 of the example
+* (done) edit: threejs-shape - update code for basic, hole, and group sections
 
-* () edit: threejs-shape - update code for basic, hole, and group sections
 * () edit: threejs-canvas-texture - at least start a module example
 
-* () forpost: start for post folder for fridays post based on current protos
 * () prototype: work on protos
-* () hexo-sitesource: at least have a new static background
-* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
+* () forpost: start for post folder for fridays post based on current protos
 
 
 ### () - MON 10/09/2022
