--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -54,7 +54,7 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) videoground-blog-posts: threejs-examples-sphere-mutate video1 on r1 of the example
 * (done) edit: threejs-shape - update code for basic, hole, and group sections
 
-* () edit: threejs-canvas-texture - at least start a module example
+* () edit: threejs-canvas-texture - new example
 
 * () prototype: work on protos
 * () forpost: start for post folder for fridays post based on current protos
