--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -46,19 +46,15 @@ Other tasks should be limited and only done after I put at least a little time i
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 
 ### () - WED 10/11/2022
-* () forpost: 
-* () edit: threejs-canvas-texture - 
+* () forpost: start prototype for fridays post
+* () edit: threejs-canvas-texture - new module section based off of what I started with in the basic example
+* () videoground-blog-posts: 
 
 ### () - TUE 10/10/2022
 * (done) edit: threejs-examples-sphere-mutate - write about new r1 example
 * (done) videoground-blog-posts: threejs-examples-sphere-mutate video1 on r1 of the example
 * (done) edit: threejs-shape - update code for basic, hole, and group sections
-
-* () edit: threejs-canvas-texture - new example
-
-* () prototype: work on protos
-* () forpost: start for post folder for fridays post based on current protos
-
+* (done) edit: threejs-canvas-texture - fixed up basic module example
 
 ### () - MON 10/09/2022
 * (done) edit: threejs-canvas-texture - new datatex example
