--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -46,9 +46,18 @@ Other tasks should be limited and only done after I put at least a little time i
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 
 ### () - WED 10/11/2022
-* () forpost: start prototype for fridays post
+
+* () forpost: threejs-object3d-get-world-position - one new loop section example
+* () videoground-blog-posts: video1 for threejs-object3d-get-world-position
+* () edit: threejs-object3d-get-world-position - embed video
+* () edit: threejs-object3d-get-world-position - write about new example
+* () edit: threejs-object3d-get-world-position - proof read and expand opening
+
 * () edit: threejs-canvas-texture - new module section based off of what I started with in the basic example
-* () videoground-blog-posts: 
+
+* () forpost: start prototype for fridays post
+* () videoground: get at least something done with r6
+
 
 ### () - TUE 10/10/2022
 * (done) edit: threejs-examples-sphere-mutate - write about new r1 example
