--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -47,9 +47,10 @@ Other tasks should be limited and only done after I put at least a little time i
 
 ### () - WED 10/11/2022
 
-* () forpost: threejs-object3d-get-world-position - one new loop section example
+* (done) forpost: threejs-object3d-get-world-position - one new loop section example
 * () videoground-blog-posts: video1 for threejs-object3d-get-world-position
 * () edit: threejs-object3d-get-world-position - embed video
+
 * () edit: threejs-object3d-get-world-position - write about new example
 * () edit: threejs-object3d-get-world-position - proof read and expand opening
 
