--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -48,11 +48,10 @@ Other tasks should be limited and only done after I put at least a little time i
 ### () - WED 10/11/2022
 
 * (done) forpost: threejs-object3d-get-world-position - one new loop section example
-* () videoground-blog-posts: video1 for threejs-object3d-get-world-position
-* () edit: threejs-object3d-get-world-position - embed video
-
-* () edit: threejs-object3d-get-world-position - write about new example
-* () edit: threejs-object3d-get-world-position - proof read and expand opening
+* (done) videoground-blog-posts: video1 for threejs-object3d-get-world-position
+* (done) edit: threejs-object3d-get-world-position - embed video
+* (done) edit: threejs-object3d-get-world-position - write about new example
+* (done) edit: threejs-object3d-get-world-position - proof read and expand opening
 
 * () edit: threejs-canvas-texture - new module section based off of what I started with in the basic example
 
