--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -39,9 +39,8 @@ Other tasks should be limited and only done after I put at least a little time i
 * () start post #1009 on threejs-
 
 ### () - THU 10/12/2022
-* () forpost: 
-* () edit: threejs-canvas-texture - 
-
+* () forpost: start prototype for Fridays post
+* () edit: threejs-canvas-texture - continue work on new module section
 * () hexo-sitesource: at least have a new static background
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 * () videoground: get at least something done with r6
@@ -52,9 +51,7 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) edit: threejs-object3d-get-world-position - embed video
 * (done) edit: threejs-object3d-get-world-position - write about new example
 * (done) edit: threejs-object3d-get-world-position - proof read and expand opening
-
-* () edit: threejs-canvas-texture - new module section based off of what I started with in the basic example
-* () forpost: start prototype for Fridays post
+* (done) edit: threejs-canvas-texture - start new module section based off of what I started with in the basic example
 
 ### () - TUE 10/10/2022
 * (done) edit: threejs-examples-sphere-mutate - write about new r1 example
