--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -44,28 +44,24 @@ Other tasks should be limited and only done after I put at least a little time i
 ### () - THU 10/12/2022
 * (done) forpost: threejs-plane - create for post folder
 * (done) edit threejs-plane - github section
-
-* () forpost: threejs-plane - expand basic section
-* () edit: threejs-plane - update basic section with new examples
+* (done) forpost: threejs-plane - expand basic section
+* (done) edit: threejs-plane - update basic section with new examples
 
 * () forpost: threejs-canvas-texture - continue work on new module section
 * () edit: threejs-canvas-texture - write about new canvasjs module
-
 * () forpost: start prototype for Fridays post
 
+
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
-
 * () videoground: get at least something done with r6
-
 * () hexo-sitesource: at least have a new static background
 
 <!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
-* () forpost: threejs-plane - new position section
-* () edit: threejs-plane - write about new position section examples
-* () forpost: threejs-plane - new normals section
-* () edit: threejs-plane - write about new normals section examples
-* () forpost: threejs-plane - new uv section
-* () edit: threejs-plane - write about new uv section examples
+* () forpost: threejs-plane - new textures section
+* () edit: threejs-plane - write about new textures section examples
+* () forpost: threejs-plane - new attributes section
+* () edit: threejs-plane - write about new attributes section examples
+
 
 ### () - WED 10/11/2022
 * (done) forpost: threejs-object3d-get-world-position - one new loop section example
