--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -46,6 +46,21 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) edit threejs-plane - github section
 * (done) forpost: threejs-plane - expand basic section
 * (done) edit: threejs-plane - update basic section with new examples
+* (done) forpost: threejs-plane - new textures section
+* (done) edit: threejs-plane - write about new textures section examples
+
+<!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
+* () forpost: threejs-plane - new attributes section
+* () edit: threejs-plane - write about new attributes section examples
+
+<!-- VIDEO 2 for threejs-plane -->
+
+* () have a loop section example for video2
+* () use data textures
+* () mutate position attribute
+
+* () videoground-blog-posts: start video2 for threejs-plane
+* () edit: threejs-plane - embed video2
 
 * () forpost: threejs-canvas-texture - continue work on new module section
 * () edit: threejs-canvas-texture - write about new canvasjs module
@@ -56,11 +71,6 @@ Other tasks should be limited and only done after I put at least a little time i
 * () videoground: get at least something done with r6
 * () hexo-sitesource: at least have a new static background
 
-<!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
-* () forpost: threejs-plane - new textures section
-* () edit: threejs-plane - write about new textures section examples
-* () forpost: threejs-plane - new attributes section
-* () edit: threejs-plane - write about new attributes section examples
 
 
 ### () - WED 10/11/2022
