--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -35,6 +35,15 @@ Other tasks should be limited and only done after I put at least a little time i
 
 ### () - SAT 10/14/2022
 
+<!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
+* () forpost: threejs-plane - new attributes section
+* () edit: threejs-plane - write about new attributes section examples
+
+<!-- misc -->
+* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
+* () videoground: get at least something done with r6
+* () hexo-sitesource: at least have a new static background
+
 ### () - FRI 10/13/2022
 * () start post #1009 on threejs-
 
@@ -49,28 +58,19 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) forpost: threejs-plane - new textures section
 * (done) edit: threejs-plane - write about new textures section examples
 
-<!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
-* () forpost: threejs-plane - new attributes section
-* () edit: threejs-plane - write about new attributes section examples
-
 <!-- VIDEO 2 for threejs-plane -->
-
 * () have a loop section example for video2
 * () use data textures
 * () mutate position attribute
-
 * () videoground-blog-posts: start video2 for threejs-plane
 * () edit: threejs-plane - embed video2
 
-* () forpost: threejs-canvas-texture - continue work on new module section
-* () edit: threejs-canvas-texture - write about new canvasjs module
+<!-- for post folder for fridays post -->
 * () forpost: start prototype for Fridays post
 
-
-* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
-* () videoground: get at least something done with r6
-* () hexo-sitesource: at least have a new static background
-
+<!-- canvas texture post -->
+* () forpost: threejs-canvas-texture - continue work on new module section
+* () edit: threejs-canvas-texture - write about new canvasjs module
 
 
 ### () - WED 10/11/2022
