--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -19,6 +19,10 @@ POST                                                        CLICKS  IMPRESSIONS
 /2021/05/11/threejs-object3d-scale/                         100     2,781
 ```
 
+## YOUTUBE
+* () update youtube github video links from threejs-examples-house forward
+
+
 ## () - WEEK 3 - SUN 10/09/2022 to SAT 10/14/2022
 
 I will want to try to keep the focus on editing one of the top ten posts per week. At this time that would mean my post on canvas textures. There is also as always what I will be writing about for my new post on Friday. I would like to try to not let to much more pull my attention away from those two things this week.
